------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 automated tests, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

29-Mar-2013 Mark Dexter
 # Fix failing system tests.

26-Mar-2013 Mark Dexter
 # Fix failing system tests due to login markup change, Tags menu item change

26-Mar-2013 Michael Babker
 +# Expand Schema test coverage

25-Mar-2013 Michael Babker
 +# Test JTableContenttype, fix bugs found in class
 +# Start testing JTags

05-Mar-2013 Mark Dexter
 # Fix system tests for tags component and modules

03-Mar-2013 Michael Babker
 + Add tests for FinderIndexerToken, JHtmlBootstrap, and JHtmlJquery
 + Add tests for JFormField and JHtml instances

27-Feb-2013 Mark Dexter
 # Fix failing system change from markup change in [#30157] *Bootstrapping tabs in administration (big patch)

22-Feb-2013 Michael Babker
 ^ Remove @covers tags in docblocks due to negative test coverage influence
 + Add test framework for FinderIndexer** library

01-Jan-2013 Mark Dexter
 # Fix failing webdriver test due to change in Module edit UI

27-Dec-2012 Michael Babker
 ^ Sync core test framework to the Platform
 + Add tests for Editor and Layout packages

22-Dec-2012 Mark Dexter
 # Fix failing system tests caused by markup changes

21-Dec-2012 Mark Dexter
 + Add tests for module manager.

18-Dec-2012 Mark Dexter
 # Fix intermittent failures in Webdriver tests

13-Dec-2012 Mark Dexter
 + Add Webdriver tests for Menu Items.
 # Fix system test for change in hathor login markup

07-Nov-2012 Mark Dexter
 + Add new Webdriver tests for Menu Manager.
 ^ Organize Pages classes in folders. Improve autoloader.

21-Nov-2012 Mark Dexter
 # Fix failing system test

11-Nov-2012 Mark Dexter
 ^ Rename config-def.php-dist to be consistent with xml files

09-Nov-2012 Mark Dexter