@@ -49,7 +49,7 @@ class User0001Test extends SeleniumJoomlaTestCase
 		$this->jPrint ("Check that user does not exist\n");
 		$this->assertFalse($this->isElementPresent("link=username1"));
 		$this->jPrint ("Clear Filter and check that Super User exists\n");
-		$this->click("//button[@type='button']");
+		$this->click("//button[@type='button'][contains(@onclick, \".value=''\")]");
 		$this->waitForPageToLoad("30000");
 		$this->assertEquals("Super User", $this->getText("link=Super User"));
 		$this->jPrint ("Finished user0001Test.php\n");
